pomer solicitudes en navbar de teachers

--- a/views/teacher/partials/navbar-tea.ejs
+++ b/views/teacher/partials/navbar-tea.ejs
@@ -120,10 +120,14 @@
                             </button>
                         </span>
                     </div>
-                    
+
                 </li> -->
+
                 <li>
                     <a href="/teacher/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                </li>
+                <li>
+                    <a href="/teacher/requests"><i class="fa fa-male fa-fw"></i> Solicitudes</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Cursos<span class="fa arrow"></span></a>
