--- a/public/stylesheets/principal.css
+++ b/public/stylesheets/principal.css
@@ -42,6 +42,10 @@
   width: 100%;
 }
 
+.margin-10{
+  margin: 10px;
+}
+
 
 /*######################################################*/
 
@@ -109,15 +113,15 @@
     }
     .modal-content {
         background-color: #f4f7f9;
-        border: 0; 
+        border: 0;
         border-radius: 2px;
-        -webkit-box-shadow: none; 
-        box-shadow: none; 
+        -webkit-box-shadow: none;
+        box-shadow: none;
     }
     .modal-dialog {
         color: #526880;
     }
     .modal-footer {
-        border-top: none; 
+        border-top: none;
     }
 }
