--- a/views/student/pages/search-stu.ejs
+++ b/views/student/pages/search-stu.ejs
@@ -23,12 +23,11 @@
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
-                <div class="row" ng-if="courses_searched.length === 0">
-                    <div class="col-lg-12">
-                        <p> No se encontraron cursos para la busqueda
-                            <%= searchFor %>
-                        </p>
-                    </div>
+                <div ng-if="courses_searched.length == 0" class="alert alert-warning alert-dismissible">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Cerrar">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    No se encontraron cursos para la búsqueda  <%= searchFor %> 
                 </div>
                 <!-- /.row -->
                 <div class="row" ng-repeat="course in courses_searched">
