--- a/views/student/partials/navbar-stu.ejs
+++ b/views/student/partials/navbar-stu.ejs
@@ -1,6 +1,6 @@
 <script src="/js/angular/controllers/searchbar.js"></script>
 
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0" ng-app = "myApp">
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0" ng-app="myApp">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -8,14 +8,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/student/dashboard"><%= user.firstName %> <%= user.lastName %></a>
+        <a class="navbar-brand" href="/student/dashboard">
+            <%= user.firstName %>
+                <%= user.lastName %>
+        </a>
     </div>
     <!-- /.navbar-header -->
 
     <ul class="nav navbar-top-links navbar-right">
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                <i class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-tasks">
                 <li>
@@ -93,7 +96,7 @@
 
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
                 <li><a href="/student/dashboard"><i class="fa fa-user fa-fw"></i> Ver Perfil</a>
@@ -113,17 +116,20 @@
     <div class="navbar-default sidebar" role="navigation" ng-controller="searchbarCtrl">
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
-                  <li class="sidebar-search">
-                      <div class="input-group custom-search-form">
-                          <input type="text" class="form-control" placeholder="Search..." ng-model="searchFor">
-                          <span class="input-group-btn">
+                <li class="sidebar-search">
+                    <div class="input-group custom-search-form">
+                        <input type="text" class="form-control" placeholder="Search..." ng-model="searchFor">
+                        <span class="input-group-btn">
                               <button class="btn btn-default" type="button" ng-click ="search()">
                                   <i class="fa fa-search"></i>
                               </button>
                           </span>
-                      </div>
+                    </div>
 
-                  </li>
+                </li>
+                <li>
+                    <a href="/student/requests"><i class="fa fa-male fa-fw"></i> Solicitudes</a>
+                </li>
                 <li>
                     <a href="/student/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
@@ -133,10 +139,10 @@
 
                         <% for (var i = 0; i < courses.length; i++){ %>
                             <% var course = courses[i]; %>
-                            <li>
-                                <a href="/student/courses/<%= course._id %>"><i class="fa fa-graduation-cap"></i> <%= course.name %></a>
-                            </li>
-                        <% } %>
+                                <li>
+                                    <a href="/student/courses/<%= course._id %>"><i class="fa fa-graduation-cap"></i> <%= course.name %></a>
+                                </li>
+                                <% } %>
 
                     </ul>
                     <!-- /.nav-second-level -->
