--- a/views/teacher/pages/activity-tea.ejs
+++ b/views/teacher/pages/activity-tea.ejs
@@ -64,7 +64,17 @@
                                     </div>
                                     <!-- /.panel-heading -->
                                     <div class="panel-body">
-
+                                        <% if (question.type == "multipleChoice"){ %>
+                                            <h1>Multiple choice</h1>
+                                        <% } else if (question.type == "yesNo"){ %>
+                                            <h1>yes no</h1>
+                                        <% } else if (question.type == "shortAnswer"){ %>
+                                            <h1>Short answer</h1>
+                                        <% } else if (question.type == "longAnswer"){ %>
+                                            <h1>Long answer</h1>
+                                        <% } else if (question.type == "numeric"){ %>
+                                            <h1>Numeric</h1>
+                                        <% } %>
                                         Resumen pregunta <%= i+1 %>
                                     </div>
                                     <!-- /.panel-body -->
