Tooltip para los pie charts listo

--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -2,3 +2,4 @@
 <script type="text/javascript" src="/js/metisMenu.min.js"></script>
 <script type="text/javascript" src="/js/flot/jquery.flot.min.js"></script>
 <script type="text/javascript" src="/js/flot/jquery.flot.pie.min.js"></script>
+<script type="text/javascript" src="/js/flot/jquery.flot.tooltip.min.js"></script>
