--- a/views/teacher/pages/activity-tea.ejs
+++ b/views/teacher/pages/activity-tea.ejs
@@ -173,7 +173,7 @@
                             }
                         },
                         grid: {
-                            hoverable: false
+                            hoverable: true
                         },
                         tooltip: true,
                         tooltipOpts: {
@@ -182,7 +182,7 @@
                                 x: 20,
                                 y: 0
                             },
-                            defaultTheme: false
+                            defaultTheme: true
                         }
                     });
                 } else if (question.type == "yesNo"){
