numeric, short answer, long answer, yes no

--- a/views/head.ejs
+++ b/views/head.ejs
@@ -16,6 +16,9 @@
 <!-- Principal -->
 <link rel="stylesheet" type="text/css" href="/stylesheets/principal.css">
 
+<!-- Bootstrap timeline CSS -->
+<link rel="stylesheet" type="text/css" href="/stylesheets/timeline.css">
+
 <!-- Morris Charts CSS -->
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 
