--- a/views/student/partials/navbar-stu.ejs
+++ b/views/student/partials/navbar-stu.ejs
@@ -16,6 +16,7 @@
     <!-- /.navbar-header -->
 
     <ul class="nav navbar-top-links navbar-right">
+        <!--
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
@@ -93,6 +94,7 @@
                 </li>
             </ul>
         </li>
+        -->
 
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -101,8 +103,13 @@
             <ul class="dropdown-menu dropdown-user">
                 <li><a href="/student/dashboard"><i class="fa fa-user fa-fw"></i> Ver Perfil</a>
                 </li>
-                <li><a href="/student/settings"><i class="fa fa-gear fa-fw"></i> Ajustes</a>
+                <!--
+                <li>
+                    <a href="/student/settings">
+                        <i class="fa fa-gear fa-fw"></i> Ajustes
+                    </a>
                 </li>
+                -->
                 <li class="divider"></li>
                 <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
                 </li>
@@ -118,7 +125,7 @@
             <ul class="nav" id="side-menu">
                 <li class="sidebar-search">
                     <div class="input-group custom-search-form">
-                        <input type="text" class="form-control" placeholder="Search..." ng-model="searchFor">
+                        <input type="text" class="form-control" placeholder="Buscar cursos..." ng-model="searchFor">
                         <span class="input-group-btn">
                               <button class="btn btn-default" type="button" ng-click ="search()">
                                   <i class="fa fa-search"></i>
