--- a/views/teacher/partials/navbar-tea.ejs
+++ b/views/teacher/partials/navbar-tea.ejs
@@ -11,6 +11,7 @@
     <!-- /.navbar-header -->
 
     <ul class="nav navbar-top-links navbar-right">
+        <!--
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -88,6 +89,7 @@
                 </li>
             </ul>
         </li>
+        -->
 
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -96,8 +98,13 @@
             <ul class="dropdown-menu dropdown-user">
                 <li><a href="/teacher/dashboard"><i class="fa fa-user fa-fw"></i> Ver Perfil</a>
                 </li>
-                <li><a href="#"><i class="fa fa-gear fa-fw"></i> Ajustes</a>
+                <!--
+                <li>
+                    <a href="#">
+                        <i class="fa fa-gear fa-fw"></i> Ajustes
+                    </a>
                 </li>
+                -->
                 <li class="divider"></li>
                 <li><a href="/logout"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
                 </li>
