crear y editar planillas

--- a/views/teacher/partials/navbar-tea.ejs
+++ b/views/teacher/partials/navbar-tea.ejs
@@ -153,7 +153,7 @@
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-table fa-fw"></i> Planillas</a>
+                    <a href="/teacher/templates"><i class="fa fa-table fa-fw"></i> Planillas</a>
                 </li>
 
             </ul>
