--- a/views/teacher/pages/new-template.ejs
+++ b/views/teacher/pages/new-template.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <% include ../../head %>
-        <title>FeedMe | Crear Actividad</title>
+        <title>FeedMe | Crear Planilla</title>
 
         <!-- Custom CSS Stylesheet -->
         <link rel="stylesheet" type="text/css" href="/stylesheets/create-activity.css">
@@ -22,9 +22,9 @@
     <% include ../partials/navbar-tea %>
         <div id="page-wrapper" ng-controller="activityCtrl">
             <!-- set the course. Note that it has to be a string, otherwise it throws an error -->
-            <div class="row" ng-init="setCourse('<%= JSON.stringify(course) %>')">
+            <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header"><%= course.name %> - Crear Actividad <%= course.activities.length + 1 %> </h1>
+                    <h1 class="page-header">Crear Planilla</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -42,7 +42,6 @@
                             </div>
                             <div class="pull-right">
                                 <button class="btn btn-default" ng-click = "createTemplate()">Guardar Planilla</button>
-                                <button class="btn btn-default" ng-click = "createActivity()">Enviar Actividad</button>
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
@@ -86,7 +85,6 @@
                             </h6>
                             <div class="pull-right">
                                 <button class="btn btn-default" ng-click = "createTemplate()">Guardar Planilla</button>
-                                <button class="btn btn-default" ng-click = "createActivity()">Enviar Actividad</button>
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
@@ -97,7 +95,6 @@
             </div>
 
             <% include ../partials/add-questions-and-templates-tea %>
-
         </div>
         <!-- /#page-wrapper -->
 
