--- a/views/teacher/pages/template-tea.ejs
+++ b/views/teacher/pages/template-tea.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <% include ../../head %>
-        <title>FeedMe | Crear Actividad</title>
+        <title>FeedMe | <%= template.name %></title>
 
         <!-- Custom CSS Stylesheet -->
         <link rel="stylesheet" type="text/css" href="/stylesheets/create-activity.css">
@@ -21,10 +21,10 @@
 
     <% include ../partials/navbar-tea %>
         <div id="page-wrapper" ng-controller="activityCtrl">
-            <!-- set the course. Note that it has to be a string, otherwise it throws an error -->
-            <div class="row" ng-init="setCourse('<%= JSON.stringify(course) %>')">
+
+            <div class="row" ng-init="setQuestions('<%= JSON.stringify(questions) %>'); setID('<%= JSON.stringify(template) %>')">
                 <div class="col-lg-12">
-                    <h1 class="page-header"><%= course.name %> - Crear Actividad <%= course.activities.length + 1 %> </h1>
+                    <h1 class="page-header">Editar Planilla </h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -36,13 +36,12 @@
                             <div class="col-lg-6">
                                 <form role="form">
                                     <div class="form-group">
-                                        <input class="form-control" id="titulo" ng-model = "title" placeholder="Ingrese el título de la actividad">
+                                        <input class="form-control" id="titulo" ng-init = "title = '<%= template.name %>'" ng-model = "title" >
                                     </div>
                                 </form>
                             </div>
                             <div class="pull-right">
-                                <button class="btn btn-default" ng-click = "createTemplate()">Guardar Planilla</button>
-                                <button class="btn btn-default" ng-click = "createActivity()">Enviar Actividad</button>
+                                <button class="btn btn-default" ng-click = "editTemplate()">Guardar Planilla</button>
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
@@ -85,9 +84,7 @@
                                 No hay preguntas. Elija bajo 'Agregar Pregunta' que tipo de pregunta desea agregar.
                             </h6>
                             <div class="pull-right">
-                                <button class="btn btn-default" ng-click = "createTemplate()">Guardar Planilla</button>
-                                <button class="btn btn-default" ng-click = "createActivity()">Enviar Actividad</button>
-                            </div>
+                                <button class="btn btn-default" ng-click = "editTemplate()">Guardar Planilla</button>                            </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
                             </h6>
@@ -97,7 +94,6 @@
             </div>
 
             <% include ../partials/add-questions-and-templates-tea %>
-
         </div>
         <!-- /#page-wrapper -->
 
