se pueden usar planillas

--- a/views/teacher/pages/new-activity.ejs
+++ b/views/teacher/pages/new-activity.ejs
@@ -47,6 +47,9 @@
                             <h6 ng-if="error" class = "error">
                               {{ error}}
                             </h6>
+                            <h6 ng-if="success" class="success">
+                                {{ success}}
+                            </h6>
                         </div>
 
                         <div class="panel-body clearfix">
@@ -90,6 +93,9 @@
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
+                            </h6>
+                            <h6 ng-if="success" class="success">
+                                {{ success}}
                             </h6>
                         </div>
                     </div>
