--- a/views/teacher/pages/new-template.ejs
+++ b/views/teacher/pages/new-template.ejs
@@ -46,6 +46,9 @@
                             <h6 ng-if="error" class = "error">
                               {{ error}}
                             </h6>
+                            <h6 ng-if="success" class="success">
+                                {{ success}}
+                            </h6>
                         </div>
 
                         <div class="panel-body clearfix">
@@ -88,6 +91,9 @@
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
+                            </h6>
+                            <h6 ng-if="success" class="success">
+                                {{ success}}
                             </h6>
                         </div>
                     </div>
