--- a/views/teacher/pages/template-tea.ejs
+++ b/views/teacher/pages/template-tea.ejs
@@ -46,6 +46,9 @@
                             <h6 ng-if="error" class = "error">
                               {{ error}}
                             </h6>
+                            <h6 ng-if="success" class="success">
+                                {{ success}}
+                            </h6>
                         </div>
 
                         <div class="panel-body clearfix">
@@ -87,6 +90,9 @@
                                 <button class="btn btn-default" ng-click = "editTemplate()">Guardar Planilla</button>                            </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
+                            </h6>
+                            <h6 ng-if="success" class="success">
+                                {{ success}}
                             </h6>
                         </div>
                     </div>
