se pueden eliminar planillas

--- a/views/teacher/pages/new-activity.ejs
+++ b/views/teacher/pages/new-activity.ejs
@@ -41,8 +41,8 @@
                                 </form>
                             </div>
                             <div class="pull-right">
-                                <button class="btn btn-default" ng-click = "createTemplate()">Guardar Planilla</button>
-                                <button class="btn btn-default" ng-click = "createActivity()">Enviar Actividad</button>
+                                <button class="btn btn-success" ng-click = "createTemplate()">Guardar Planilla</button>
+                                <button class="btn btn-primary" ng-click = "createActivity()">Enviar Actividad</button>
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
@@ -88,8 +88,8 @@
                                 No hay preguntas. Elija bajo 'Agregar Pregunta' que tipo de pregunta desea agregar.
                             </h6>
                             <div class="pull-right">
-                                <button class="btn btn-default" ng-click = "createTemplate()">Guardar Planilla</button>
-                                <button class="btn btn-default" ng-click = "createActivity()">Enviar Actividad</button>
+                                <button class="btn btn-success" ng-click = "createTemplate()">Guardar Planilla</button>
+                                <button class="btn btn-primary" ng-click = "createActivity()">Enviar Actividad</button>
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
