--- a/views/teacher/pages/new-template.ejs
+++ b/views/teacher/pages/new-template.ejs
@@ -41,7 +41,7 @@
                                 </form>
                             </div>
                             <div class="pull-right">
-                                <button class="btn btn-default" ng-click = "createTemplate()">Guardar Planilla</button>
+                                <button class="btn btn-success" ng-click = "createTemplate()">Guardar Planilla</button>
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
@@ -87,7 +87,7 @@
                                 No hay preguntas. Elija bajo 'Agregar Pregunta' que tipo de pregunta desea agregar.
                             </h6>
                             <div class="pull-right">
-                                <button class="btn btn-default" ng-click = "createTemplate()">Guardar Planilla</button>
+                                <button class="btn btn-success" ng-click = "createTemplate()">Guardar Planilla</button>
                             </div>
                             <h6 ng-if="error" class = "error">
                               {{ error}}
